<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    style="@style/Layout">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/mainimage"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        style="@style/InnerLayout">

        <TextView
            android:id="@+id/app_title_tv"
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/app_name" />

        <LinearLayout
            style="@style/InnerLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:id="@+id/host_b"
                style="@style/Buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="host"
                android:text="@string/host" />

            <Button
                android:id="@+id/join_b"
                style="@style/Buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="join"
                android:text="@string/join" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>