<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    style="@style/Layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Results">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/mainbackground"
        android:scaleType="centerCrop" />

    <LinearLayout
        style="@style/InnerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/result_tv"
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/results" />

        <LinearLayout
            style="@style/InnerLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/rematch_b"
                style="@style/Buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="rematch"
                android:text="@string/rematch" />

            <Button
                android:id="@+id/main_b"
                style="@style/Buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="main"
                android:text="@string/main_menu" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>