<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Host">

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:srcCompat="@drawable/mainbackground"
      android:scaleType="centerCrop" />

  <LinearLayout
      style="@style/InnerLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

    <TextView
        android:id="@+id/host_title_tv"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/host" />

    <LinearLayout
        style="@style/InnerLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

      <TextView
          android:id="@+id/lobby_name_tv"
          style="@style/SubTitle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/lobby_name" />

      <EditText
          style="@style/InputText"
          android:id="@+id/lobby_name_et"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        style="@style/InnerLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

      <TextView
          android:id="@+id/player_name_tv"
          style="@style/SubTitle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/player_name" />

      <EditText
          style="@style/InputText"
          android:id="@+id/player_name_et"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:inputType="textPersonName" />

      <Button
          android:id="@+id/button"
          style="@style/Buttons"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="host"
          android:text="@string/host" />
    </LinearLayout>
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>